[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nbpreview_rtlabs"
version = "0.9.2"
description = "nbpreview rtlabs updated fork with updates to bring components to current patch levels"
authors = [
  { name = "Stephen Kapp - RTLabs", email = "mort666@virus.org" },
  { name = "Paulo S. Costa", email = "Paulo.S.Costa5@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
  "nbpreview_rtlabs*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
  "nbpreview_rtlabs.tests*",
] # exclude packages matching these glob patterns (empty by default)
namespaces = false

[project.scripts]
nbpreview = "nbpreview_rtlabs.__main__:app"
nbp = "nbpreview_rtlabs.__main__:app"